Had to revert return on actions to be a single string. Lists and tuples not supported
